# rust-snippets

macros/attribute-based-dynamic-dispatch/: Cargo.toml
macros/attribute-based-dynamic-dispatch/command_macro/: Cargo.toml
macros/attribute-based-dynamic-dispatch/command_macro/src/: lib.rs
macros/attribute-that-adds-a-method/: Cargo.toml
macros/attribute-that-adds-a-method/command_macro/: Cargo.toml
macros/attribute-that-adds-a-method/command_macro/src/: lib.rs
macros/method-name-based-dynamic-dispatch/command_macro/: Cargo.toml
macros/method-name-based-dynamic-dispatch/command_macro/src/: lib.rs
macros/method-name-based-dynamic-dispatch/src/: main.rs
