[package]
name = "command_macro"
version = "0.1.0"
authors = ["Ximon Eighteen <3304436+ximon18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"

[dependencies.syn]
version = "1.0.23"
features = ["derive","full","parsing","printing","clone-impls","extra-traits","proc-macro"]
